--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="menu__item" href="#"><span>TEAM</span></a>
       <a class="menu__item" href="#"><span>LEGACY</span></a>
       <a class="menu__item" href="#"><span>HELP</span></a>
-      <a class="menu__item" href="#"><img src="images/search.svg" class="menu__item-search"></a>
+      <input type="text" size="40" name="name" class="menu__search">
       <a class="menu__item" href="#"><span>SIGN IN</span></a>
       <a class="menu__item" href="#"><span class="menu__item-text">CART</span></a>
     </nav>
@@ -45,32 +45,60 @@
   <div class="catalog">
     <div class="title">Featured product</div>
       <div class="catalog__models">
-        <div class="catalog__model" id="catolog__model_first">
+        <div class="catalog__model">
           <div class="catalog__foto"><img src="images/shoes-black.svg"></div>
           <p class="catalog__title">Atlas Black/Rasta Axion</p>
-          <p class="catalog__price">$89.00</p>
-          <div class="catalog__color"></div>
+            <div class="catalog__price-color">
+              <p class="catalog__price">$89.00</p>
+            <div class="catalog__color">
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+            </div>
+          </div>
         </div>
         <img src="images/line.png" class="catalog__line">
-        <div class="catalog__model" id="catolog__model_second">
+        <div class="catalog__model">
           <div class="catalog__foto"><img src="images/shoes-brown.svg"></div>
           <p class="catalog__title">Camel/Chili Pepper Axion</p>
-          <p class="catalog__price">$74.00</p>
-          <div class="catalog__color"></div>
+          <div class="catalog__price-color">
+            <p class="catalog__price">$74.00</p>
+            <div class="catalog__color">
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+              </div>
+          </div>
         </div>
         <img src="images/line.png" class="catalog__line">
-        <div class="catalog__model" id="catolog__model_third">
+        <div class="catalog__model">
           <div class="catalog__foto"><img src="images/shoes-grey.svg"></div>
           <p class="catalog__title">Mandel Smoke/Rust Axion</p>
-          <p class="catalog__price">$69.00</p>
-          <div class="catalog__color"></div>
+          <div class="catalog__price-color">
+            <p class="catalog__price">$69.00</p>
+            <div class="catalog__color">
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+            </div>
+          </div>
         </div>
         <img src="images/line.png" class="catalog__line">
-        <div class="catalog__model" id="catolog__model_fourth">
+        <div class="catalog__model">
           <div class="catalog__foto"><img src="images/shoes-white.svg"></div>
           <p class="catalog__title">Cloud/Electric Blue Axion</p>
-          <p class="catalog__price">$69.00</p>
-          <div class="catalog__color"></div>
+          <div class="catalog__price-color">
+            <p class="catalog__price">$69.00</p>
+            <div class="catalog__color">
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+                <div class="catalog__cirle"></div>
+              </div>
+          </div>
         </div>
       </div>
   </div>
@@ -91,7 +119,7 @@
 
   <div class="title">Recent stories</div>
   <div class="story">
-    <div class="story__box" id="story__box_first">
+    <div class="story__box">
       <div class="story__foto"><img src="images/story-1.jpg"></div>
       <p class="story__title">Presents Justin Anagoa</p>
       <p class="story__subtitle">Anagoa’s been a part of the skater’s family ever since his early teenage years.
@@ -102,7 +130,7 @@
         <p class="story__date">11.08.2018</p>
       </div>
     </div>
-    <div class="story__box" id="story__box_second">
+    <div class="story__box">
       <div class="story__foto"><img src="images/story-2.jpg"></div>
       <p class="story__title">First Frontside flip</p>
       <p class="story__subtitle">Yoon recently discusses his first time shooting a signature Andrew Reynolds
@@ -113,7 +141,7 @@
         <p class="story__date">17.08.2018</p>
       </div>
     </div>
-    <div class="story__box" id="story__box_third">
+    <div class="story__box">
       <div class="story__foto"><img src="images/story-3.jpg"></div>
       <p class="story__title">Kevin Baekkel is Pro</p>
       <p class="story__subtitle">Creature proudly announced today that they’re officially a
