Add mobile version

--- a/index.html
+++ b/index.html
@@ -183,64 +183,67 @@
             </div>
           </div>
           <div class="gallery">
-            <div class="gallery__tag">#AXIONfootwear</div>
-            <div class="gallery__fotos">
-              <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-2.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-3.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-4.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-5.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-6.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-7.jpg" class="gallery__foto" alt="Gallery foto">
-              <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
-            </div>
-          </div>
-
-          <footer>
-            <div class="footer">
-              <div class="footer__columns">
-                <div class="footer__column">
-                  <p class="footer__title">MY ACCOUNT</p>
-                  <p class="footer__subtitle">Login</p>
-                  <p  class="footer__subtitle">Wish List</p>
-                  <p  class="footer__subtitle">Order History</p>
-                  <p  class="footer__subtitle">Track order</p>
-                  <p  class="footer__subtitle">Gift cards</p>
-                </div>
-                <div class="footer__column">
-                  <p class="footer__title">CUSTOMER SERVICE</p>
-                  <p  class="footer__subtitle">Contact us</br></p>
-                  <p  class="footer__subtitle">Help/FAQ</br></p>
-                  <p  class="footer__subtitle">Shipping</br></p>
-                  <p  class="footer__subtitle">Returns</br></p>
-                  <p  class="footer__subtitle">Size guide</br></p>
-                  <p  class="footer__subtitle">Holiday shopping</p>
-                </div>
-                <div class="footer__column">
-                  <p class="footer__title">MISCELLANEOUS</p>
-                  <p  class="footer__subtitle">About Us</br></p>
-                  <p  class="footer__subtitle">Careers</br></p>
-                  <p  class="footer__subtitle">Privacy Policy</br></p>
-                  <p  class="footer__subtitle">Terms & Conditions</br></p>
-                  <p  class="footer__subtitle">Ethical Policy</br></p>
-                  <p  class="footer__subtitle">Homepage US/UK</p>
-                </div>
-                <div class="footer__column">
-                  <p class="footer__title">NEWSLETTER SIGN UP</p>
-                  <p class="footer__offer">Get 10% Off Your Next Order!</p>
-                  <button class="footer__button">SIGN UP</button>
-                  <div class="footer__socialnets">
-                    <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
-                    <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
-                    <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
-                    <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
-                  </div>
+            <div class="gallery__background"></div>
+              <div class="gallery__container ">
+                <div class="gallery__tag">#AXIONfootwear</div>
+                <div class="gallery__fotos">
+                  <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-2.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-3.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-4.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-5.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-6.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-7.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
                 </div>
               </div>
-              <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
             </div>
-          </footer>
 
-        </body>
+            <footer>
+              <div class="footer">
+                <div class="footer__columns">
+                  <div class="footer__column">
+                    <p class="footer__title">MY ACCOUNT</p>
+                    <p class="footer__subtitle">Login</p>
+                    <p  class="footer__subtitle">Wish List</p>
+                    <p  class="footer__subtitle">Order History</p>
+                    <p  class="footer__subtitle">Track order</p>
+                    <p  class="footer__subtitle">Gift cards</p>
+                  </div>
+                  <div class="footer__column">
+                    <p class="footer__title">CUSTOMER SERVICE</p>
+                    <p  class="footer__subtitle">Contact us</br></p>
+                    <p  class="footer__subtitle">Help/FAQ</br></p>
+                    <p  class="footer__subtitle">Shipping</br></p>
+                    <p  class="footer__subtitle">Returns</br></p>
+                    <p  class="footer__subtitle">Size guide</br></p>
+                    <p  class="footer__subtitle">Holiday shopping</p>
+                  </div>
+                  <div class="footer__column">
+                    <p class="footer__title">MISCELLANEOUS</p>
+                    <p  class="footer__subtitle">About Us</br></p>
+                    <p  class="footer__subtitle">Careers</br></p>
+                    <p  class="footer__subtitle">Privacy Policy</br></p>
+                    <p  class="footer__subtitle">Terms & Conditions</br></p>
+                    <p  class="footer__subtitle">Ethical Policy</br></p>
+                    <p  class="footer__subtitle">Homepage US/UK</p>
+                  </div>
+                  <div class="footer__column">
+                    <p class="footer__title">NEWSLETTER SIGN UP</p>
+                    <p class="footer__offer">Get 10% Off Your Next Order!</p>
+                    <button class="footer__button">SIGN UP</button>
+                    <div class="footer__socialnets">
+                      <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
+                      <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
+                      <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
+                      <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
+                    </div>
+                  </div>
+                </div>
+                <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
+              </div>
+            </footer>
 
-        </html>
+          </body>
+
+          </html>
