--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="header">
-    <div class="menu-right">
+    <div class="menu-left">
       <div class="logo-main"> </div>
       <nav class="menu">
         <a class="menu__item" href="#">SHOP</a>
@@ -21,7 +21,7 @@
         <a class="menu__item" href="#">HELP</a>
       </nav>
     </div>
-    <div class="menu-left">
+    <div class="menu-right">
       <nav class="menu">
         <div class="menu__search-container">
           <button class="icon" href="#"><i class="fa fa-search"></i></button>
@@ -34,8 +34,8 @@
       <div class="menu__language">
         <button class="language"><img src="images/flag-usa.svg" alt="Flag USA"></button>
         <div class="language-type">
-          <a href="#"><img src="images/flag-rus.png" alt="Flag Russia" width="20px" href="20px"></a>
-          <a href="#"><img src="images/flag-spain.jpg" alt="Flag Spain" width="20px" href="20px"></a>
+          <a href="#"><img src="images/flag-rus.png" alt="Flag Russia" width="21px" height="15px" border="1px"></a>
+          <a href="#"><img src="images/flag-spain.jpg" alt="Flag Spain" width="20px" height="15px" border="1px"></a>
         </div>
       </div>
     </div>
@@ -187,14 +187,14 @@
               <div class="gallery__container ">
                 <div class="gallery__tag">#AXIONfootwear</div>
                 <div class="gallery__fotos">
-                  <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-2.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-3.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-4.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-5.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-6.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-7.jpg" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-1.jpg" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-1.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-2.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-3.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-4.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-5.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-6.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-7.png" class="gallery__foto" alt="Gallery foto">
+                  <img src="images/bw-1.png" class="gallery__foto" alt="Gallery foto">
                 </div>
               </div>
             </div>
