--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
   <div class="header">
+    <div class="logo-mobile"> </div>
+    <input id="menu__toggle" type="checkbox">
+    <label class="menu__btn" for="menu__toggle">
+      <span></span>
+    </label>
     <div class="menu-left">
       <div class="logo-main"> </div>
       <nav class="menu">
@@ -39,13 +44,7 @@
         </div>
       </div>
     </div>
-    <div class="hamburger-menu">
-      <div class="logo-mobile"> </div>
-      <input id="menu__toggle" type="checkbox">
-      <label class="menu__btn" for="menu__toggle">
-        <span></span>
-      </label>
-    </div>
+    <!-- </div> -->
   </div>
 
 
@@ -184,66 +183,66 @@
           </div>
           <div class="gallery">
             <div class="gallery__background"></div>
-              <div class="gallery__container ">
-                <div class="gallery__tag">#AXIONfootwear</div>
-                <div class="gallery__fotos">
-                  <img src="images/bw-1.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-2.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-3.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-4.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-5.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-6.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-7.png" class="gallery__foto" alt="Gallery foto">
-                  <img src="images/bw-1.png" class="gallery__foto" alt="Gallery foto">
-                </div>
+            <div class="gallery__container ">
+              <div class="gallery__tag">#AXIONfootwear</div>
+              <div class="gallery__fotos">
+                <img src="images/bw-1.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-2.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-3.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-4.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-5.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-6.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-7.png" class="gallery__foto" alt="Gallery foto">
+                <img src="images/bw-1.png" class="gallery__foto" alt="Gallery foto">
               </div>
             </div>
+          </div>
 
-            <footer>
-              <div class="footer">
-                <div class="footer__columns">
-                  <div class="footer__column">
-                    <p class="footer__title">MY ACCOUNT</p>
-                    <p class="footer__subtitle">Login</p>
-                    <p  class="footer__subtitle">Wish List</p>
-                    <p  class="footer__subtitle">Order History</p>
-                    <p  class="footer__subtitle">Track order</p>
-                    <p  class="footer__subtitle">Gift cards</p>
-                  </div>
-                  <div class="footer__column">
-                    <p class="footer__title">CUSTOMER SERVICE</p>
-                    <p  class="footer__subtitle">Contact us</br></p>
-                    <p  class="footer__subtitle">Help/FAQ</br></p>
-                    <p  class="footer__subtitle">Shipping</br></p>
-                    <p  class="footer__subtitle">Returns</br></p>
-                    <p  class="footer__subtitle">Size guide</br></p>
-                    <p  class="footer__subtitle">Holiday shopping</p>
-                  </div>
-                  <div class="footer__column">
-                    <p class="footer__title">MISCELLANEOUS</p>
-                    <p  class="footer__subtitle">About Us</br></p>
-                    <p  class="footer__subtitle">Careers</br></p>
-                    <p  class="footer__subtitle">Privacy Policy</br></p>
-                    <p  class="footer__subtitle">Terms & Conditions</br></p>
-                    <p  class="footer__subtitle">Ethical Policy</br></p>
-                    <p  class="footer__subtitle">Homepage US/UK</p>
-                  </div>
-                  <div class="footer__column">
-                    <p class="footer__title">NEWSLETTER SIGN UP</p>
-                    <p class="footer__offer">Get 10% Off Your Next Order!</p>
-                    <button class="footer__button">SIGN UP</button>
-                    <div class="footer__socialnets">
-                      <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
-                      <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
-                      <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
-                      <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
-                    </div>
+          <footer>
+            <div class="footer">
+              <div class="footer__columns">
+                <div class="footer__column">
+                  <p class="footer__title">MY ACCOUNT</p>
+                  <p class="footer__subtitle">Login</p>
+                  <p  class="footer__subtitle">Wish List</p>
+                  <p  class="footer__subtitle">Order History</p>
+                  <p  class="footer__subtitle">Track order</p>
+                  <p  class="footer__subtitle">Gift cards</p>
+                </div>
+                <div class="footer__column">
+                  <p class="footer__title">CUSTOMER SERVICE</p>
+                  <p  class="footer__subtitle">Contact us</br></p>
+                  <p  class="footer__subtitle">Help/FAQ</br></p>
+                  <p  class="footer__subtitle">Shipping</br></p>
+                  <p  class="footer__subtitle">Returns</br></p>
+                  <p  class="footer__subtitle">Size guide</br></p>
+                  <p  class="footer__subtitle">Holiday shopping</p>
+                </div>
+                <div class="footer__column">
+                  <p class="footer__title">MISCELLANEOUS</p>
+                  <p  class="footer__subtitle">About Us</br></p>
+                  <p  class="footer__subtitle">Careers</br></p>
+                  <p  class="footer__subtitle">Privacy Policy</br></p>
+                  <p  class="footer__subtitle">Terms & Conditions</br></p>
+                  <p  class="footer__subtitle">Ethical Policy</br></p>
+                  <p  class="footer__subtitle">Homepage US/UK</p>
+                </div>
+                <div class="footer__column">
+                  <p class="footer__title">NEWSLETTER SIGN UP</p>
+                  <p class="footer__offer">Get 10% Off Your Next Order!</p>
+                  <button class="footer__button">SIGN UP</button>
+                  <div class="footer__socialnets">
+                    <a href="#"><img src="images/fb.png" alt="Logo FB"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Logo Twitter"></a>
+                    <a href="#"><img src="images/inst.png" alt="Logo Inst"></a>
+                    <a href="#"><img src="images/pint.png" alt="Logo Pinterest"></a>
                   </div>
                 </div>
-                <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
               </div>
-            </footer>
+              <p class="footer__quote">© 2019 Axion. All rights reserved.</p>
+            </div>
+          </footer>
 
-          </body>
+        </body>
 
-          </html>
+        </html>
